--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
     <h1>Welcome to my website</h1>
     <p>Please stay a while and look around</p>
     <p>Hello <%= locals.userName ?? 'New User!' %></p>
+    <% for(let i=0;i<8;i++){ %>
+            <p><img width="200" src="book.png" alt="Stack of magic books"></p>
+    <% } %>
+    
 </body>
 </html>
