--- a/views/wotd.ejs
+++ b/views/wotd.ejs
@@ -7,8 +7,8 @@
 <body>
     <h1>Welcome to George's Word of the Day</h1>
     <p>Every time you visit there will be a random word shown:</p>
-    <p><% word %> - <% part %></p>
-    <p><% definition %></p>
+    <p><%= word %> - <%= part %></p>
+    <p><%= definition %></p>
     
 </body>
 </html>
